adding main image

--- a/experiences.html
+++ b/experiences.html
@@ -40,10 +40,11 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <h2>NatuPark Awesome Experiences</h2>
-            <img src="" alt="eye-candy main image">
-        </section>
+        <div class="main-section">
+            <div class="main-text">
+                <h2>NatuPark Awesome Experiences</h2>
+            </div>
+        </div>
         <section class="sub-section" id="experiences">
             <h2>Awesome Experiences</h2>
             <div class="item">
