adding image and modified the positions in zipline

--- a/experiences.html
+++ b/experiences.html
@@ -45,14 +45,20 @@
                 <h2>NatuPark Awesome Experiences</h2>
             </div>
         </div>
+        <!--Zipline section -->
         <section class="sub-section" id="experiences">
             <h2>Awesome Experiences</h2>
-            <div class="item">
-                <h3>ZipLine</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
-                <img class="card-image square-image" alt="ZipLine Image"/>
+            <div class="container">
+                <div class="zipline-img">
+                    <img src= "/images/zipline.jpg" class="card-image square-image" alt="ZipLine Image"/>
+                </div>
+                <div class="zipline-text">
+                    
+                    <h3>ZipLine</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                </div>
             </div>
-            <div class="item">
+            <div class="container">
                 <h3>Kayaking</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
                 <img class="card-image square-image" alt="Kayaking Image"/>
