--- a/experiences.html
+++ b/experiences.html
@@ -45,39 +45,58 @@
                 <h2>NatuPark Awesome Experiences</h2>
             </div>
         </div>
-        <!--Zipline section -->
+        <!--section experiences-->
         <section class="sub-section" id="experiences">
             <h2>Awesome Experiences</h2>
             <div class="container">
                 <div class="zipline-img">
-                    <img src= "/images/zipline.jpg" class="card-image square-image" alt="ZipLine Image"/>
+                    <img src= "/images/zipline.jpg" class="card-image zipline-image" alt="ZipLine Image"/>
                 </div>
                 <div class="zipline-text">
-                    
                     <h3>ZipLine</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                    <button class="button" type="button">
+                        Book your visit
+                    </button>
                 </div>
             </div>
             <div class="container">
-                <h3>Kayaking</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
-                <img class="card-image square-image" alt="Kayaking Image"/>
+                <div class="kayaking-text">
+                    <h3>Kayaking</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>    
+                </div>  
+                <div class="kayaking-img">
+                    <img src="/images/kayaking.jpg" class="kayaking-image square-image" alt="Kayaking Image"/>
+                </div> 
             </div>
-            <div class="item">
-                <h3>Bungee Jump</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
-                <img class="card-image square-image" alt="Bungee Jump Image"/>
+            <div class="container">
+                <div class="bungee-img">
+                    <img src="/images/bungee.jpg" class="bungee-image square-image" alt="Bungee Jump Image"/>
+                </div>
+                <div class="bungee-text">
+                    <h3>Bungee Jump</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                </div>          
             </div>
-            <div class="item">
-                <h3>Canopy Walking</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
-                <img class="card-image square-image" alt="Canopy Walking Image"/>
+            <div class="container">
+                <div class="canopy-text">
+                    <h3>Canopy Walking</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                </div>
+                <div class="canopy-img">
+                    <img src="/images/canopy.jpg" class="canopy-image square-image" alt="Canopy Walking Image"/>
+                </div>
             </div>
-            <div class="item">
-                <h3>Rapel + Canyoning</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
-                <img class="card-image square-image" alt="Rapel + Canyoning Image"/>
+            <div class="container">
+                <div class="rapel-img">
+                    <img src="images/rapel.jpg" class="rapel-image square-image" alt="Rapel + Canyoning Image"/>
+                </div>
+                <div class="rapel-text">
+                    <h3>Rapel + Canyoning</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                </div>
             </div>
+        <!--section book-->
         <section class="sub-section" id="book">
             <h2>Book your stay</h2>
             <p>Natupark has nursery, a pet “hotel”, a parking area, restaurant, bar and
