--- a/experiences.html
+++ b/experiences.html
@@ -64,6 +64,9 @@
                 <div class="kayaking-text">
                     <h3>Kayaking</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>    
+                    <button class="button" type="button">
+                        Book your visit
+                    </button>
                 </div>  
                 <div class="kayaking-img">
                     <img src="/images/kayaking.jpg" class="kayaking-image square-image" alt="Kayaking Image"/>
@@ -76,12 +79,18 @@
                 <div class="bungee-text">
                     <h3>Bungee Jump</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                    <button class="button" type="button">
+                        Book your visit
+                    </button>
                 </div>          
             </div>
             <div class="container">
                 <div class="canopy-text">
                     <h3>Canopy Walking</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                    <button class="button" type="button">
+                        Book your visit
+                    </button>
                 </div>
                 <div class="canopy-img">
                     <img src="/images/canopy.jpg" class="canopy-image square-image" alt="Canopy Walking Image"/>
@@ -94,6 +103,9 @@
                 <div class="rapel-text">
                     <h3>Rapel + Canyoning</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                    <button class="button" type="button">
+                        Book your visit
+                    </button>
                 </div>
             </div>
         <!--section book-->
