create cards in book section

--- a/experiences.html
+++ b/experiences.html
@@ -110,23 +110,30 @@
             </div>
         <!--section book-->
         <section class="sub-section" id="book">
-            <h2>Book your stay</h2>
-            <p>Natupark has nursery, a pet “hotel”, a parking area, restaurant, bar and
-                all cabins have well equipped kitchen for those who like to cook.
-            </p>
-            <div class="packages-options">
-                <div class="package" id="daily-pass">
-                    <h3>Daily Pass</h3>
-                    <p>
-                        All rides and activites included
-                    </p>
-                    <p class="price">
-                        $75/person
-                        <button>Book Now</button>
-                    </p>
+            <div class="book-section">
+                <h2>Book your stay</h2>
+                <p>Natupark has nursery, a pet “hotel”, a parking area, restaurant, bar and
+                    all cabins have well equipped kitchen for those who like to cook.
+                </p>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <div class="card packages-options">
+                        <div class="package" id="daily-pass">
+                            <h3>Daily Pass</h3>
+                            <p>
+                                All rides and activites included
+                            </p>
+                            <p class="price">
+                                $75/person
+                                <button>Book Now</button>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
-                <div class="package" id="weekend-pass">
+            <div class="column">
+                <div class="card package" id="weekend-pass">
                     <h3>Weekend Pass<br>(saturday/sunday)</h3>
                     <p>All rides and activites included</p>
                     <p>Lunch and Dinner</p>
@@ -135,7 +142,9 @@
                         <button>Book Now</button>
                     </p>
                 </div>
-                <div class="package" id="family-weekend">
+            </div>
+            <div class="column">
+                <div class="card package" id="family-weekend">
                     <h3>Family Weekend (friday-sunday)</h3>
                     <p>Stay at our cabins and enjoy all rides andactivities</p>
                     <p>Breakfast, Lunch and Dinner</p>
