create card images in book section

--- a/experiences.html
+++ b/experiences.html
@@ -121,13 +121,14 @@
                     <div class="card packages-options">
                         <div class="package" id="daily-pass">
                             <h3>Daily Pass</h3>
+                            <img src="/images/daily-pass.jpg" alt="daily pass image"/>
                             <p>
                                 All rides and activites included
                             </p>
                             <p class="price">
                                 $75/person
-                                <button>Book Now</button>
                             </p>
+                            <button>Book Now</button>
                         </div>
                     </div>
                 </div>
@@ -135,23 +136,25 @@
             <div class="column">
                 <div class="card package" id="weekend-pass">
                     <h3>Weekend Pass<br>(saturday/sunday)</h3>
+                    <img src="/images/weekend-pass.jpeg" class="weekend-img" alt="weekend pass image"/>
                     <p>All rides and activites included</p>
                     <p>Lunch and Dinner</p>
                     <p class="price">
                         $180/person
-                        <button>Book Now</button>
                     </p>
+                    <button>Book Now</button>
                 </div>
             </div>
             <div class="column">
                 <div class="card package" id="family-weekend">
                     <h3>Family Weekend (friday-sunday)</h3>
+                    <img src="/images/family-weekends.jpeg" class="family-img" alt="family weekends image"/>
                     <p>Stay at our cabins and enjoy all rides andactivities</p>
                     <p>Breakfast, Lunch and Dinner</p>
                     <p class="price">
                         $750 for a family of 4
-                        <button>Book Now</button>
                     </p>
+                    <button>Book Now</button>
                 </div>
             </div>
         </section>
