modified footer layout

--- a/experiences.html
+++ b/experiences.html
@@ -108,85 +108,99 @@
                     </button>
                 </div>
             </div>
+        </section>
         <!--section book-->
-        <section class="sub-section" id="book">
+        <section class="container" id="book">
             <div class="book-section">
                 <h2>Book your stay</h2>
                 <p>Natupark has nursery, a pet “hotel”, a parking area, restaurant, bar and
                     all cabins have well equipped kitchen for those who like to cook.
                 </p>
             </div>
-            <div class="row">
-                <div class="column">
-                    <div class="card packages-options">
-                        <div class="package" id="daily-pass">
-                            <h3>Daily Pass</h3>
-                            <img src="/images/daily-pass.jpg" alt="daily pass image"/>
-                            <p>
-                                All rides and activites included
-                            </p>
+            <div class="container" id="card-image">
+                <div class="row">
+                    <div class="column">
+                        <div class="card">
+                            <div class="daily-pass" >
+                                <h3>Daily Pass</h3>
+                                <img src="/images/daily-pass.jpg" alt="daily pass image"/>
+                                <p>
+                                    All rides and activites included
+                                </p>
+                                <p class="price">
+                                    $75/person
+                                </p>
+                                <button class="button" type="button">
+                                    Book now
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card package" id="weekend-pass">
+                            <h3>Weekend Pass<br>(saturday/sunday)</h3>
+                            <img src="/images/weekend-pass.jpeg" class="weekend-img" alt="weekend pass image"/>
+                            <p>All rides and activites included</p>
+                            <p>Lunch and Dinner</p>
                             <p class="price">
-                                $75/person
+                                $180/person
                             </p>
-                            <button>Book Now</button>
+                            <button class="button" type="button">
+                                Book now
+                            </button>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card package" id="family-weekend">
+                            <h3>Family Weekend (friday-sunday)</h3>
+                            <img src="/images/family-weekends.jpeg" class="family-img" alt="family weekends image"/>
+                            <p>Stay at our cabins and enjoy all rides and activities</p>
+                            <p>Breakfast, Lunch and Dinner</p>
+                            <p class="price">
+                                $750 for a family of 4
+                            </p>
+                            <button class="button" type="button">
+                                Book now
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="card package" id="weekend-pass">
-                    <h3>Weekend Pass<br>(saturday/sunday)</h3>
-                    <img src="/images/weekend-pass.jpeg" class="weekend-img" alt="weekend pass image"/>
-                    <p>All rides and activites included</p>
-                    <p>Lunch and Dinner</p>
-                    <p class="price">
-                        $180/person
-                    </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card package" id="family-weekend">
-                    <h3>Family Weekend (friday-sunday)</h3>
-                    <img src="/images/family-weekends.jpeg" class="family-img" alt="family weekends image"/>
-                    <p>Stay at our cabins and enjoy all rides andactivities</p>
-                    <p>Breakfast, Lunch and Dinner</p>
-                    <p class="price">
-                        $750 for a family of 4
-                    </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
         </section>
-            <div class="faux-hero">
-                <img src="" alt="eye-candy image">
-            </div>
+        <section class="image2">
+            <!-- <img src="/" class="image2" alt="eye candy image"/> -->
         </section>
+      
     </main>
     <footer>
-        <h2>NatuPark</h2>
-        <nav class="footer-nav">
-            <ul>
-                <li><b>Fun&Nature</b></li>
-                <li>ZipLine</li>
-                <li>Bungee Jump</li>
-                <li>Kyaking</li>
-                <li>Canopy walkways</li>
-                <li>Rapel/canyoning</li>
-            </ul>
-            <ul>
-                <li>Testimonials</li>
-                <li>Photo Albums</li>
-                <li>Community Videos</li>
-            </ul>
-            <ul>
-                <li><b>About NatuPark</b></li>
-                <li>Our non-profit Cooperative</li>
-                <li>Careers</li>
-                <li>News</li>
-                <li>Getting Here</li>
-            </ul>
-        </nav>
+        <div id="footer">
+            <h2>NatuPark</h2>
+            <nav class="footer-nav">
+                <div class="footer-menu">
+                    <ul class="footer-link">
+                        <li><b>Fun&Nature</b></li>
+                        <li>ZipLine</li>
+                        <li>Bungee Jump</li>
+                        <li>Kyaking</li>
+                        <li>Canopy walkways</li>
+                        <li>Rapel/canyoning</li>
+                    </ul>
+                    <ul>
+                        <li>Testimonials</li>
+                        <li>Photo Albums</li>
+                        <li>Community Videos</li>
+                    </ul>
+                    <ul>
+                        <li><b>About NatuPark</b></li>
+                        <li>Our non-profit Cooperative</li>
+                        <li>Careers</li>
+                        <li>News</li>
+                        <li>Getting Here</li>
+                    </ul>
+                </div>
+
+            </nav>
+        </div>
     </footer>
 
 </body>
