adding links to the footer menu

--- a/experiences.html
+++ b/experiences.html
@@ -177,25 +177,25 @@
             <h2>NatuPark</h2>
             <nav class="footer-nav">
                 <div class="footer-menu">
-                    <ul class="footer-link">
-                        <li><b>Fun&Nature</b></li>
-                        <li>ZipLine</li>
-                        <li>Bungee Jump</li>
-                        <li>Kyaking</li>
-                        <li>Canopy walkways</li>
-                        <li>Rapel/canyoning</li>
+                    <ul>
+                        <li><a href="/"><b>Fun&Nature</b></a></li>
+                        <li><a href="/">ZipLine</a></li>
+                        <li><a href="/">Bungee Jump</a></li>
+                        <li><a href="/">Kyaking</a></li>
+                        <li><a href="/">Canopy walkways</a></li>
+                        <li><a href="/">Rapel/canyoning</a></li>
                     </ul>
                     <ul>
-                        <li>Testimonials</li>
-                        <li>Photo Albums</li>
-                        <li>Community Videos</li>
+                        <li><a href="/">Testimonials</a></li>
+                        <li><a href="/">Photo Albums</a></li>
+                        <li><a href="/">Community Videos</a></li>
                     </ul>
                     <ul>
-                        <li><b>About NatuPark</b></li>
-                        <li>Our non-profit Cooperative</li>
-                        <li>Careers</li>
-                        <li>News</li>
-                        <li>Getting Here</li>
+                        <li><a href="/"><b>About NatuPark</b></a></li>
+                        <li><a href="/">Our non-profit Cooperative</a></li>
+                        <li><a href="/">Careers</a></li> 
+                        <li><a href="/">News</a></li>
+                        <li><a href="/">Getting Here</a></li>
                     </ul>
                 </div>
 
