modified responsive navbar, footer and cards

--- a/experiences.html
+++ b/experiences.html
@@ -47,7 +47,7 @@
             <h2>Awesome Experiences</h2>
             <div class="container">
                 <div class="zipline-img">
-                    <img src= "/images/zipline.jpg" class="card-image zipline-image" alt="ZipLine Image"/>
+                    <img src= "/images/zipline.jpg" class="responsive zipline-image" alt="ZipLine Image"/>
                 </div>
                 <div class="zipline-text">
                     <h3>ZipLine</h3>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="kayaking-text">
+                <div class="text-desc">
                     <h3>Kayaking</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>    
                     <button class="button" type="button">
@@ -66,14 +66,14 @@
                     </button>
                 </div>  
                 <div class="kayaking-img">
-                    <img src="/images/kayaking.jpg" class="kayaking-image square-image" alt="Kayaking Image"/>
+                    <img src="/images/kayaking.jpg" class="responsive kayaking-image" alt="Kayaking Image"/>
                 </div> 
             </div>
             <div class="container">
                 <div class="bungee-img">
-                    <img src="/images/bungee.jpg" class="bungee-image square-image" alt="Bungee Jump Image"/>
+                    <img src="/images/bungee.jpg" class="responsive bungee-image" alt="Bungee Jump Image"/>
                 </div>
-                <div class="bungee-text">
+                <div class="text--desc">
                     <h3>Bungee Jump</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
                     <button class="button" type="button">
@@ -82,7 +82,7 @@
                 </div>          
             </div>
             <div class="container">
-                <div class="canopy-text">
+                <div class="text-desc">
                     <h3>Canopy Walking</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
                     <button class="button" type="button">
@@ -90,14 +90,14 @@
                     </button>
                 </div>
                 <div class="canopy-img">
-                    <img src="/images/canopy.jpg" class="canopy-image square-image" alt="Canopy Walking Image"/>
+                    <img src="/images/canopy.jpg" class="responsive canopy-image" alt="Canopy Walking Image"/>
                 </div>
             </div>
             <div class="container">
                 <div class="rapel-img">
-                    <img src="images/rapel.jpg" class="rapel-image square-image" alt="Rapel + Canyoning Image"/>
+                    <img src="images/rapel.jpg" class="responsive rapel-image" alt="Rapel + Canyoning Image"/>
                 </div>
-                <div class="rapel-text">
+                <div class="text-desc">
                     <h3>Rapel + Canyoning</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
                     <button class="button" type="button">
@@ -116,8 +116,9 @@
             </div>
             <div class="first pass">
                 <img class="book-profile-img" src="/images/daily-pass.jpg" alt="daily pass">
-                <div class="book-description-bk"><b>Daily Pass</b></div>
+                <div class="book-description-bk"></div>
                 <div class="book-description">
+                  <p><b>Daily Pass</b></p>
                   <p>All rides and activites included</p>
                 </div>
                 <div  class="book-price">
@@ -129,8 +130,11 @@
               </div>
               <div class="second pass">
                 <img class="book-profile-img" src="/images/weekend-pass.jpeg" alt="weekend pass">
-                <div class="book-description-bk"><b>Weekend Pass</b></div>
+                <div class="book-description-bk"></div>
                 <div class="book-description">
+                    <p>
+                        <b>Weekend Pass</b>
+                    </p>
                     <p>All rides and activites included lunch and dinner </p>
                     <p></p>                </div>
                 <div  class="book-price">
@@ -142,10 +146,10 @@
               </div>
               <div class="third pass">
                 <img class="book-profile-img" src="/images/family-weekends.jpeg" alt="family weekend">
-                <div class="book-description-bk"><b>Family Weekend (friday-sunday)</b></div>
+                <div class="book-description-bk"></div>
                 <div class="book-description">
-                    <p>Stay at our cabins and enjoy all rides and activities</p>
-                    <p>Breakfast, Lunch and Dinner</p>
+                    <p><b>Family Weekend (friday-sunday)</b></p>
+                    <p>Stay at our cabins and enjoy all rides and activities. Breakfast, Lunch and Dinner</p>
                 </div>
                 <div  class="book-price">
                   <p>$750 for a family of 4</p>
