removed unused codes

--- a/experiences.html
+++ b/experiences.html
@@ -41,12 +41,16 @@
     </header>
     <main>
         <div class="main-section">
+
         </div>
         <!--section experiences-->
         <section class="sub-section" id="experiences">
-            <h2>Awesome Experiences</h2>
-            <div class="container">
-                <div class="zipline-img">
+
+          <h2>Awesome Experiences</h2>
+          <div class="container">
+            <div class="row">
+              <div class="column">
+                  <div class="zipline-img">
                     <img src= "/images/zipline.jpg" class="responsive zipline-image" alt="ZipLine Image"/>
                 </div>
                 <div class="zipline-text">
@@ -56,55 +60,77 @@
                         Book your visit
                     </button>
                 </div>
+              </div>
             </div>
-            <div class="container">
-                <div class="text-desc">
-                    <h3>Kayaking</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>    
-                    <button class="button" type="button">
-                        Book your visit
-                    </button>
-                </div>  
-                <div class="kayaking-img">
-                    <img src="/images/kayaking.jpg" class="responsive kayaking-image" alt="Kayaking Image"/>
-                </div> 
+
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="column">
+                <div class="kayaking-text">
+                  <h3>Kayaking</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>    
+                  <button class="button" type="button">
+                      Book your visit
+                  </button>
+              </div>  
+              <div class="kayaking-img">
+                  <img src="/images/kayaking.jpg" class="responsive kayaking-image" alt="Kayaking Image"/>
+              </div> 
+              </div>
             </div>
-            <div class="container">
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <div class="column">
                 <div class="bungee-img">
-                    <img src="/images/bungee.jpg" class="responsive bungee-image" alt="Bungee Jump Image"/>
-                </div>
-                <div class="text--desc">
-                    <h3>Bungee Jump</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
-                    <button class="button" type="button">
-                        Book your visit
-                    </button>
-                </div>          
+                  <img src="/images/bungee.jpg" class="responsive bungee-image" alt="Bungee Jump Image"/>
+              </div>
+              <div class="bungee-text">
+                  <h3>Bungee Jump</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                  <button class="button" type="button">
+                      Book your visit
+                  </button>
+              </div> 
+              </div>
+            </div>    
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <div class="column">
+                <div class="canopy-text">
+                  <h3>Canopy Walking</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                  <button class="button" type="button">
+                      Book your visit
+                  </button>
+              </div>
+              <div class="canopy-img">
+                  <img src="/images/canopy.jpg" class="responsive canopy-image" alt="Canopy Walking Image"/>
+              </div>
+              </div>
             </div>
-            <div class="container">
-                <div class="text-desc">
-                    <h3>Canopy Walking</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
-                    <button class="button" type="button">
-                        Book your visit
-                    </button>
-                </div>
-                <div class="canopy-img">
-                    <img src="/images/canopy.jpg" class="responsive canopy-image" alt="Canopy Walking Image"/>
-                </div>
-            </div>
-            <div class="container">
+          </div>
+
+          <div class="container">
+            <div class="row">
+              <div class="column">
                 <div class="rapel-img">
-                    <img src="images/rapel.jpg" class="responsive rapel-image" alt="Rapel + Canyoning Image"/>
-                </div>
-                <div class="text-desc">
-                    <h3>Rapel + Canyoning</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
-                    <button class="button" type="button">
-                        Book your visit
-                    </button>
-                </div>
+                  <img src="images/rapel.jpg" class="responsive rapel-image" alt="Rapel + Canyoning Image"/>
+              </div>
+              <div class="rapel-text">
+                  <h3>Rapel + Canyoning</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit velit sint magni in, dolore mollitia harum voluptas quo rem saepe iste adipisci, cum, quae quaerat? Similique quia recusandae ullam sit.</p>
+                  <button class="button" type="button">
+                      Book your visit
+                  </button>
+              </div>
+              </div>
             </div>
+          </div>
         </section>
         <!--section book-->
         <section class="container" id="book">
@@ -201,39 +227,6 @@
             </li>
         </ul>
       </footer>
-    <!-- <footer>
-        <div class="content">
-          <div class="left box">
-            <div class="upper">
-              <h2>NatuPark</h2>
-              <div class="topic"><b>Fun&Nature</b></div>
-                <ul>
-                    <li><a href="/">ZipLine</a></li>
-                    <li><a href="/">Bungee Jump</a></li>
-                    <li><a href="/">Kyaking</a></li>
-                    <li><a href="/">Canopy walkways</a></li>
-                    <li><a href="/">Rapel/canyoning</a></li>
-                </ul>
-            </div>
-            <div class="lower">
-              <div class="topic">Costumers</div>
-                <ul>
-                    <li><a href="/">Testimonials</a></li>
-                    <li><a href="/">Photo Albums</a></li>
-                    <li><a href="/">Community Videos</a></li>
-                </ul>
-            </div>
-            <br />
-            <div class="topic"><b>About NatuPark</b></div>
-            <ul>
-                <li><a href="/">Our non-profit Cooperative</a></li>
-                <li><a href="/">Careers</a></li> 
-                <li><a href="/">News</a></li>
-                <li><a href="/">Getting Here</a></li>
-            </ul>
-          </div>
-        </div>
-    </footer> -->
 </body>
 
 </html>
